--- a/module-1/03-pricing-cards-1/code/index.html
+++ b/module-1/03-pricing-cards-1/code/index.html
@@ -14,7 +14,7 @@
   <p class="subhead">plans that work for everyone</p>
 
   <div class="plans">
-    <div class="plan">
+    <div class="plan plan--light">
       <h2 class="plan__title">basic</h2>
       <p class="plan__price accent">
         $4.99<span>/month</span>
@@ -24,7 +24,7 @@
       <a href="#" class="button button--dark">Join Now</a>
     </div>
 
-    <div class="plan text-white">
+    <div class="plan plan--dark">
       <h2 class="plan__title">super</h2>
       <p class="plan__price">
         $19.99<span>/month</span>
