--- a/module-1/05-pricing-cards-3-updated-design/01 - Start here/index.html
+++ b/module-1/05-pricing-cards-3-updated-design/01 - Start here/index.html
@@ -25,7 +25,7 @@
         <a href="#" class="button">Join Now</a>
       </div>
 
-      <div class="plan plan--accent">
+      <div class="plan plan--accent plan--tall">
         <h2 class="plan__title">super</h2>
         <p class="plan__price">
           $19.99<span>/month</span>
@@ -34,7 +34,7 @@
           cursus justo</p>
         <a href="#" class="button">Join Now</a>
       </div>
-      <div class="plan plan--light">
+      <div class="plan plan--dark">
         <h2 class="plan__title">Enterprise</h2>
         <p class="plan__price">
           $49.99<span>/month</span>
@@ -55,7 +55,7 @@
 
       <div class="team-members">
 
-        <div class="team-member">
+        <div class="team-member team-member--light">
           <img src="img/team-01.jpg" alt="">
           <div class="info">
             <h3 class="name">Adriana Ramirez</h3>
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <div class="team-member">
+        <div class="team-member team-member--light">
           <img src="img/team-02.jpg" alt="">
           <div class="info">
             <h3 class="name">Calvin Miles</h3>
@@ -73,7 +73,7 @@
           </div>
         </div>
 
-        <div class="team-member">
+        <div class="team-member team-member--dark">
           <img src="img/team-03.jpg" alt="">
           <div class="info">
             <h3 class="name">Hardy Smith</h3>
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="team-member">
+        <div class="team-member team-member--dark">
           <img src="img/team-04.jpg" alt="">
           <div class="info">
             <h3 class="name">Janae Watts</h3>
