--- a/module-2/01-project-files/01 - start-here/index.html
+++ b/module-2/01-project-files/01 - start-here/index.html
@@ -18,6 +18,9 @@
   <main>
     <div class="hero">
       <!-- your code here -->
+      <h1 class="hero__title">Books hard to follow, and YouTube letting you down? <span>Learn magic the right way.</span></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare, nunc ligula scelerisque eros.</p>
+      <button class="btn">Start learning</button>
     </div>
   </main>
 
