--- a/module-2/03-magic-site-v2/01 - starting files/index.html
+++ b/module-2/03-magic-site-v2/01 - starting files/index.html
@@ -18,14 +18,14 @@
   <main>
     <section class="hero">
       <div class="container">
-        <div class="">
+        <div class="hero__content">
           <div class="flow-content">
             <h1>Books hard to follow, and YouTube letting you down? <span>Learn magic the right way.</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare, nunc
               ligula scelerisque eros.</p>
             <a href="#" class="btn">Start learning</a>
           </div>
-          <div>
+          <div class="hero__img">
             <img src="assets/hero.jpg"
               alt="man with a deck of cards floating between his hands, which are in front of his concealed face">
           </div>
@@ -61,7 +61,7 @@
       </div> <!-- /container -->
     </section>
 
-    <section>
+    <section class="join">
       <div class="container">
         <h2>Join now and get access to our entire library of tricks</h2>
         <ul>
@@ -90,7 +90,7 @@
     </section>
 
     <section class="cta">
-      <div class="container">
+      <div class="container flow-content">
         <h2>You’re only one step away</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare.</p>
         <a href="#" class="btn">Start Learning</a>
